[tool.poetry]
name = "robot-server"
version = "0.1.0"
description = "An asynchronous TCP/IP Server implementing communication for automatic control of remote robots."
authors = ["Hryhorii Biloshenko <hryhorii.biloshenko@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sxccxs/robot_server"

[tool.poetry.dependencies]
python = "^3.11.3"
typing-extensions = "^4.6.3"


[tool.poetry.group.dev.dependencies]
sphinx = "7.0.1"
myst-parser = "^2.0.0"
furo = "^2023.5.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
